// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar shows the application progress bar as determinated if we are running tests 1`] = `
<CircularProgress
  id="progress"
  mode="determinate"
  size={100}
  value={55}
/>
`;

exports[`ProgressBar shows the application progress bar as indeterminated if we are not running tests 1`] = `
<CircularProgress
  id="progress"
  mode="indeterminate"
  size={100}
  value={55}
/>
`;
